--- a/invoice-service/src/main/resources/application.yaml
+++ b/invoice-service/src/main/resources/application.yaml
@@ -7,6 +7,6 @@ spring:
       ddl-auto: create-drop
     open-in-view: false
   datasource:
-    username: sa
-    password:
-    url: jdbc:h2:mem:invoice-service
+    username: invoices
+    password: invoicesPw
+    url: jdbc:mariadb://localhost:13306/invoices
