--- a/monitoring-service/src/main/resources/application.yaml
+++ b/monitoring-service/src/main/resources/application.yaml
@@ -1,2 +1,14 @@
 server:
   port: 8081
+
+spring:
+  datasource:
+    username: monitoring
+    password: monitoringPw
+    url: jdbc:mariadb://localhost:23306/monitoring
+
+camunda:
+  bpm:
+    database:
+      type: mysql
+      schema-update: true
